--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+#main:
+#   resource: "@MainBundle/Resources/config/routing.yml"
+#    prefix:   /
+
 main:
     resource: "@MainBundle/Controller/"
     type:     annotation
