--- a/src/MainBundle/Resources/config/services.yml
+++ b/src/MainBundle/Resources/config/services.yml
@@ -1,4 +1,18 @@
-services:
+#services:
 #    main.example:
 #        class: MainBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
+
+services:
+    my.service:
+        class: MainBundle\Repository\PatientRepository
+        arguments: [ @doctrine.orm.entity_manager, @service_container ]
+            
+    app.repo:
+        class:  MainBundle\Repository\PatientRepository
+    
+    patient:
+        class: MainBundle\Entity\Patient
+#    main.co:
+#        class: MainBundle\Controller\MainController
+#        arguments: [ @doctrine.orm.entity_manager, @service_container ]
